overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vue
  labels:
    environment: vue
    monitoring: enabled
