overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guitartortona-vue
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: guitar-ca-issuer
    nginx.ingress.kubernetes.io/limit-rps: "200"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vue.guitar.lab
      secretName: guitar-wildcard-tls
  rules:
    - host: vue.guitar.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guitartortona-vue
                port:
                  number: 80
